--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+    <div class="conteGral">
     <main class="container">
         <div class="form">
             <input class="boxText" type="text" placeholder="Buscar Pokemon..." id="entrada">
@@ -76,6 +77,8 @@
             <div class="spinner">
             </div>
         </div>
+    </div>
+    
     </div>
 
     <script src="main.js"></script>
