--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
             <div id="cardPokemon" class="card">
                 <div class="imgName">
-                    <img id="imgPokemon" src="" alt="">
+                    <img id="imgPokemon" src="" alt="" onload="carga.classList.remove('open');"> 
                     <h2 id="titlePokemon"></h2>
 
                     <div class="arrow left">
