--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon</title>
+    <title>Pokémon API</title>
 
     <link rel="stylesheet" href="CSS/style.css">
     
@@ -13,7 +13,7 @@
     <div class="conteGral">
         <main class="container">
             <div class="form">
-                <input class="boxText" type="text" placeholder="Buscar Pokemon..." id="entrada">
+                <input class="boxText" type="text" placeholder="Buscar Pokémon..." id="entrada">
                 <button class="btonForm" type="button" id="buscar" onclick="validation()">Buscar</button>
             </div>
         
